--- a/style.css
+++ b/style.css
@@ -3,8 +3,10 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #fff;
     color: #333;
+    background-image: url("bg.jpg");
+    background-size: cover;
+    background-position: center;
   }
   
   .container {
@@ -62,6 +64,7 @@ body {
   /* Section styles */
   section {
     margin-bottom: 40px;
+    text-align: center;
   }
   
   section h1 {
@@ -85,8 +88,8 @@ body {
   form input[type="text"],
   form input[type="email"],
   form input[type="password"] {
-    width: 100%;
-    padding: 10px;
+    width: 25%;
+    padding: 8px;
     margin-bottom: 10px;
   }
   
@@ -140,5 +143,8 @@ body {
     height: auto;
   }
   
+  .logo {
+    margin-right: auto;
+  }
   /* Customize other elements as needed */
   
