--- a/style.css
+++ b/style.css
@@ -83,3 +83,60 @@ nav{
   margin: auto;
   padding: 5rem 2rem;
 }
+
+.blur{
+  position: absolute;
+  box-shadow: 0 0 1000px 50px midnightblue;
+  z-index: -100;
+}
+
+header{
+  position: relative;
+  padding-top: 2rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  align-items: center;
+  gap: 2rem;
+}
+
+header .content h4{
+  margin-bottom: 1rem;
+  color: midnightblue;
+  font-size: 1rem;
+  font-weight: 600;
+}
+
+header .content h1{
+  color: midnightblue;
+  margin-bottom: 1rem;
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 4rem;
+}
+
+header .content h1 span{
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 2px midnightblue;
+}
+
+header .content p{
+  margin-bottom: 2rem;
+  color: midnightblue;
+}
+
+header .image{
+  position: relative;
+}
+
+header .image img{
+  max-width: 400px;
+  margin: auto;
+}
+
+section .header{
+  margin-bottom: 1rem;
+  color: #fff;
+  text-align: center;
+  font-size: 2.25rem;
+  font-weight: 600;
+}
