--- a/style.css
+++ b/style.css
@@ -140,3 +140,18 @@ section .header{
   font-size: 2.25rem;
   font-weight: 600;
 }
+
+.features{
+  margin-top: 4rem;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 1rem;
+}
+
+.features .card{
+  background-color: cornflowerblue;
+  padding: 1rem;
+  border: 2px solid transparent;
+  border-radius: 15px;
+  transition: all 0.3s ease;
+}
